# requests-html

./: Makefile  Pipfile  README.md  README.rst  mkdocs.yml  pyproject.toml  requests_html.py  setup.py
.github/: tests.yaml
.github/workflows/: pypi-publish.yaml  tests.yaml
v0.0.6/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.6/requests-htmlc/requests_html/: index.html
v0.0.7/: 404.html  index.html  sitemap.xml
v0.0.7/requests-htmlc/requests_html/: index.html
v0.0.7/search/: search_index.json
v0.0.8/: 404.html  index.html  sitemap.xml
v0.0.8/requests-htmlc/requests_html/: index.html
v0.0.8/search/: search_index.json
